--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "middlewares",
+  "name": "servingfiles",
   "version": "1.0.0",
-  "description": "Introduction to middlewares",
+  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Yuvraj",
+  "author": "yuvi",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.1.0"
   }
 }
